# tongues

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  README.md  listenbury
configs/g2p2g/: default.toml
configs/sentence-parser/: default.toml
configs/speech-manifold/: default.toml  wikimedia-pronunciations.jsonl
configs/wiktionary/: default.toml  pie.toml
crates/speaking/: Cargo.toml  build.rs
crates/speaking/src/: asr.rs  lib.rs  phonetics.rs  phonology.rs  prosody.rs  spec.rs  syllabify.rs  syntax.rs  text_stability.rs  transcript.rs  whisper.rs  word_stream.rs
crates/speaking/src/data/lexicons/: cmudict.rs
crates/speaking/src/data/notation/: mod.rs
crates/speaking/src/data/varieties/: mod.rs
crates/speaking/src/data/varieties/english/: catalog.rs
crates/speaking/src/data/varieties/spanish/: mod.rs
crates/speech/: Cargo.toml
crates/speech/src/: acoustics.rs  evidence.rs  feature.rs  ids.rs  lib.rs  phonemicize.rs
crates/speech/src/data/: mod.rs
crates/speech/src/data/lexicons/: cmudict.rs  mod.rs
crates/speech/src/data/notation/: arpabet.rs  openepd.rs
crates/speech/src/data/varieties/: mod.rs
crates/styletts2/: Cargo.toml
crates/styletts2/src/: backend.rs  config.rs  lib.rs  mock.rs  onnx.rs  plan.rs  request.rs  symbols.rs
crates/styletts2/tests/: contract.rs
crates/tongues-cli/: Cargo.toml
crates/tongues-cli/src/: main.rs  piper.rs  speak.rs
crates/tongues-cli/src/models/: manifest.rs
crates/tongues-core/: Cargo.toml
crates/tongues-core/src/: lib.rs
crates/tongues-data/: Cargo.toml
crates/tongues-data/src/: lib.rs
crates/tongues-g2p2g/: Cargo.toml
crates/tongues-g2p2g/src/: lib.rs
crates/tongues-interpretation/: Cargo.toml
crates/tongues-interpretation/src/: lib.rs
crates/tongues-librispeech-asr/: Cargo.toml
crates/tongues-librispeech-asr/src/: lib.rs
crates/tongues-neural/: Cargo.toml
crates/tongues-neural/src/: lib.rs
crates/tongues-sentence-parser/: Cargo.toml
crates/tongues-sentence-parser/src/: lib.rs
crates/tongues-speech-manifold/: Cargo.toml
crates/tongues-speech-manifold/src/: lib.rs
crates/tongues-wiktionary/: Cargo.toml
crates/tongues-wiktionary/src/: lib.rs
datasets/g2p2g/openepd-v0/: test.jsonl  test_words.txt  train_words.txt  valid.jsonl  valid_words.txt
datasets/sentence-parser/v0/: README.md  dataset_config.json  naive_discrepancies.jsonl  test.jsonl  valid.jsonl  vocab.json
datasets/sentence-parser/v0/sources/: synthetic-boundary-cases.txt
docs/: architecture.md  examples.md  g2p2g.md  interpretation.md  librispeech-asr.md  licensing.md  refinement.md  sentence-parser.md  speech-manifold.md  wiktionary.md
docs/models/: wiktionary-default.md
models/cmudict-v0/: train_state.json  vocab.json
models/cmudict-v0-refined/: model_config.json
models/cmudict-v0.1/: train_config.json  train_state.json
models/g2p2g/openepd-v0/: manifest.json  model_config.json  train_config.json  train_state.json  vocab.json
models/wiktionary/enwiktionary-2026-06-01-v0-phones/: manifest.json  model_config.json  train_config.json  train_state.json  vocab.json  wiktionary_config.json
pronlex-cli/: Cargo.toml
pronlex-cli/src/: main.rs  piper.rs  speak.rs
pronlex-cli/src/models/: manifest.rs  mod.rs  selection.rs
pronlex-core/: Cargo.toml
pronlex-core/src/: lib.rs
pronlex-data/: Cargo.toml
pronlex-data/src/: lib.rs
pronlex-model/: Cargo.toml
pronlex-model/src/: lib.rs
runs/cmudict-v0/: test.jsonl  valid.jsonl  valid_words.txt
runs/cmudict-v0.1/: test.jsonl  test_words.txt  train_words.txt  valid.jsonl  vocab.json
scripts/: new-model-family.sh
speech/: Cargo.toml
speech/src/: evidence.rs  morphology.rs  orthography.rs  phonemicize.rs  realize.rs  rules.rs  segment.rs  streaming.rs  syllabify.rs  time.rs  utterance.rs  variety.rs
speech/src/data/notation/: openepd.rs
speech/src/data/varieties/english/: mod.rs  morphology.rs
speech/src/data/varieties/esperanto/: mod.rs
styletts2/src/: onnx.rs  plan.rs  symbols.rs
styletts2/tests/: contract.rs
tongues-cli/: Cargo.toml
tongues-cli/src/: main.rs
tongues-cli/src/models/: cli.rs  download.rs
tongues-core/src/: lib.rs
tongues-data/: Cargo.toml
tongues-data/src/: lib.rs
tongues-model/: Cargo.toml
xtask/src/: main.rs
