[workspace]
members = ["pronlex-core", "pronlex-data", "pronlex-model", "pronlex-cli"]
resolver = "2"

[workspace.dependencies]
burn = { version = "0.21", features = ["ndarray", "autodiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"
thiserror = "1"
