[workspace]
members = [
    "crates/tongues-core",
    "crates/tongues-data",
    "crates/tongues-neural",
    "crates/tongues-g2p2g",
    "crates/tongues-speech-manifold",
    "crates/tongues-sentence-parser",
    "crates/tongues-wiktionary",
    "crates/tongues-cli",
    "crates/speech",
    "crates/styletts2",
    "xtask",
]
resolver = "2"

[workspace.dependencies]
burn = { version = "0.21", features = ["ndarray", "autodiff"] }
burn-cuda = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
anyhow = "1"
thiserror = "1"
dirs = "6"
hound = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
ureq = { version = "3", default-features = false, features = ["rustls"] }
sha2 = "0.10"
cpal = "0.15"
inquire = "0.9.4"
owo-colors = "4"
indicatif = "0.17"
toml = "0.8"
bzip2 = "0.4"
