[package]
name = "pronlex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pronlex"
path = "src/main.rs"

[dependencies]
pronlex-core = { path = "../pronlex-core" }
pronlex-data = { path = "../pronlex-data" }
pronlex-model = { path = "../pronlex-model" }
burn = { workspace = true }
burn-cuda = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
