[package]
name = "pronlex-data"
version = "0.1.0"
edition = "2021"

[dependencies]
pronlex-core = { path = "../pronlex-core" }
speech = { path = "../speech" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
