[package]
name = "pronlex-model"
version = "0.1.0"
edition = "2021"

[dependencies]
pronlex-core = { path = "../pronlex-core" }
pronlex-data = { path = "../pronlex-data" }
burn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
