[package]
name = "tongues-model"
version = "0.1.0"
edition = "2021"

[dependencies]
tongues-core = { path = "../tongues-core" }
tongues-data = { path = "../tongues-data" }
burn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }
