[package]
name = "tongues-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tongues"
path = "src/main.rs"

[dependencies]
tongues-core = { path = "../tongues-core" }
tongues-data = { path = "../tongues-data" }
tongues-g2p2g = { path = "../tongues-g2p2g" }
tongues-interpretation = { path = "../tongues-interpretation" }
tongues-neural = { path = "../tongues-neural" }
tongues-sentence-parser = { path = "../tongues-sentence-parser" }
tongues-wiktionary = { path = "../tongues-wiktionary" }
burn = { workspace = true }
burn-cuda = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true }
hound = { workspace = true }
sha2 = { workspace = true }
cpal = { workspace = true }
inquire = { workspace = true }
owo-colors = { workspace = true }
speaking = { path = "../speaking", features = ["asr-whisper"] }
styletts2 = { path = "../styletts2" }
indicatif = { workspace = true }
toml = { workspace = true }
open-english-pronouncing-dictionary = "0.1.0"

[dependencies.ort]
version = "=2.0.0-rc.12"
optional = true
default-features = false
features = ["load-dynamic", "api-23"]

[features]
default = ["styletts2-onnx", "piper-onnx"]
styletts2-onnx = ["styletts2/styletts2-onnx"]
piper-onnx = ["dep:ort"]
