[package]
name = "tongues-data"
version = "0.1.0"
edition = "2021"

[dependencies]
tongues-core = { path = "../tongues-core" }
speaking = { path = "../speaking" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
