[package]
name = "tongues-g2p2g"
version = "0.1.0"
edition = "2021"

[dependencies]
tongues-core = { path = "../tongues-core" }
tongues-data = { path = "../tongues-data" }
tongues-neural = { path = "../tongues-neural" }
burn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }
