[package]
name = "tongues-interpretation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
burn = { workspace = true }
claxon = "0.4"
flate2 = "1"
hound = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
seams = "0.1.2"
serde = { workspace = true }
serde_json = { workspace = true }
speaking = { path = "../speaking" }
tar = "0.4"
tongues-core = { path = "../tongues-core" }
tongues-neural = { path = "../tongues-neural" }
ureq = { workspace = true }
