[package]
name = "tongues-sentence-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
speech = { path = "../speech" }
thiserror = { workspace = true }
tongues-neural = { path = "../tongues-neural" }
