[package]
name = "tongues-sentence-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
seams = "0.1.2"
speech = { path = "../speech" }
thiserror = { workspace = true }
tongues-core = { path = "../tongues-core" }
tongues-data = { path = "../tongues-data" }
tongues-neural = { path = "../tongues-neural" }
ureq = { workspace = true }
