[package]
name = "tongues-wiktionary"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bzip2 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
speech = { path = "../speech" }
toml = { workspace = true }
tongues-core = { path = "../tongues-core" }
tongues-neural = { path = "../tongues-neural" }
ureq = { workspace = true }
